fixed blog overlapping

--- a/Public/styles.css
+++ b/Public/styles.css
@@ -471,6 +471,7 @@ section {
 
 .blogItem {
   display: block;
+  padding-bottom: 45px;
 }
 .blogHPtext {
   display: block;
