--- a/Public/stylesmob.css
+++ b/Public/stylesmob.css
@@ -52,6 +52,16 @@
     position: relative;
   }
 
+  .listArticlesBlogHP {
+    width: 50%;
+    font-size: 17px;
+    margin-left: 0px;
+    margin-bottom: 10px;
+    color: black;
+    display: block;
+    position: relative;
+  }
+
   .txthead2 {
     left: 10px;
     width: 805;
